# get-comments

./: .gitignore  Cargo.toml  README.md  gitignore
.github/workflows/: release.yml
src/: main.rs  parse.rs
testdata/: code-comments.sh  text-comments.sh  text-test-data1.txt  text-test-data2.txt
testdata/documents/: EPIC comment.md
testdata/documents/EPIC comment/: ITEM file.md  ITEM line.md  ITEM start.md  ITEM write to file.md
testdata/sales/: PERSON Jan Pogompoel.md
testdata/sales/PERSON Jan Pogompoel/: INVOICE 001.md
testdata/sales/PERSON Jan Pogompoel/INVOICE 001/: ITEM line items.md
